--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@swimlane/ngx-charts": "^7.0.0",
     "core-js": "^2.4.1",
+    "d3": "^4.11.0",
     "json-server": "^0.12.1",
     "moment": "^2.19.1",
     "rxjs": "^5.4.2",
