--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@angular/router": "^4.2.4",
     "@swimlane/ngx-charts": "^5.3.1",
     "core-js": "^2.4.1",
-    "d3": "^4.11.0",
+    "d3": "^4.12.0",
     "json-server": "^0.12.1",
-    "moment": "^2.19.1",
+    "moment": "^2.19.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -37,9 +37,9 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.92",
     "codelyzer": "~3.1.1",
-    "concurrently": "^3.5.0",
+    "concurrently": "^3.5.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
